tests/ui/box/unit/unique-pinned-nocopy.stderr
error[E0599]: no method named `clone` found for struct `Box<R>` in the current scope
  --> $DIR/unique-pinned-nocopy.rs:12:16
   |
LL |     let _j = i.clone();
   |                ^^^^^ method not found in `Box<R>`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
   = note: the following trait defines an item `clone`, perhaps you need to implement it:
           candidate #1: `Clone`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
